Image description alignment fixed

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -140,6 +140,12 @@ a.thread-title strong i {
   margin-right:2px;
 }
 
+.image_description {
+  display: inherit;
+  align-items: inherit;
+  justify-content: inherit;
+}
+
 small {
   font-size: small;
 }
